--- a/src/locales/bg.json
+++ b/src/locales/bg.json
@@ -1,20 +1,20 @@
 {
-  "allgemeinmedizin.heroTitle": "",
-  "allgemeinmedizin.heroText": "",
-  "allgemeinmedizin.focusTitle": "",
-  "allgemeinmedizin.focus1": "",
-  "allgemeinmedizin.focus2": "",
-  "allgemeinmedizin.focus3": "",
-  "allgemeinmedizin.focus4": "",
-  "allgemeinmedizin.focus5": "",
-  "allgemeinmedizin.focus6": "",
-  "allgemeinmedizin.focus7": "",
-  "allgemeinmedizin.focus8": "",
-  "allgemeinmedizin.preventionTitle": "",
-  "allgemeinmedizin.preventionText": "",
-  "allgemeinmedizin.chronicTitle": "",
-  "allgemeinmedizin.chronicText1": "",
-  "allgemeinmedizin.chronicText2": "",
+  "allgemeinmedizin.heroTitle": "Обща медицина",
+  "allgemeinmedizin.heroText": "Общата медицина е сърцето на нашата практика. Ние сме вашата първа точка за контакт при всички здравни въпроси – независимо дали става дума за остри оплаквания, хронични заболявания или профилактика. С модерна диагностика, лично внимание и дългогодишен опит подкрепяме вас и вашето семейство във всяка ситуация.",
+  "allgemeinmedizin.focusTitle": "Нашите основни направления",
+  "allgemeinmedizin.focus1": "Остра помощ при инфекции, наранявания и болка",
+  "allgemeinmedizin.focus2": "Лечение на високо кръвно налягане, диабет и сърдечно-съдови заболявания",
+  "allgemeinmedizin.focus3": "Грижа за деца, възрастни и възрастни хора",
+  "allgemeinmedizin.focus4": "Ваксинации според препоръките на STIKO",
+  "allgemeinmedizin.focus5": "Профилактични прегледи и здравни проверки",
+  "allgemeinmedizin.focus6": "Консултации по пътувания и ваксинации",
+  "allgemeinmedizin.focus7": "Малка обработка на рани директно в кабинета",
+  "allgemeinmedizin.focus8": "Домашни посещения при нужда и с предварителна уговорка",
+  "allgemeinmedizin.preventionTitle": "Профилактика и превенция",
+  "allgemeinmedizin.preventionText": "Превенцията е по-добра от лечението. В нашата практика предлагаме редовни профилактични прегледи, скринингови програми и здравни проверки. Целта е ранно откриване на заболявания и предотвратяването им чрез целенасочени мерки. Това включва скрининг за рак на кожата, основни кардиологични прегледи, кръвни изследвания и консултации за хранене, движение и начин на живот.",
+  "allgemeinmedizin.chronicTitle": "Хронични заболявания и дългосрочна грижа",
+  "allgemeinmedizin.chronicText1": "Много хора живеят с хронични заболявания като диабет, астма или сърдечно-съдови заболявания. Постоянната и надеждна грижа е от решаващо значение за качеството на живот.",
+  "allgemeinmedizin.chronicText2": "Подкрепяме нашите пациенти в дългосрочен план, индивидуално адаптираме терапевтичните планове и работим в тясно сътрудничество със специалисти. Така гарантираме, че дори при сложни заболявания ще получите оптимална грижа.",
   "innereMedizin.heroTitle": "",
   "innereMedizin.heroText": "",
   "innereMedizin.diagnosticsTitle": "",
