--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -1,20 +1,20 @@
 {
-  "allgemeinmedizin.heroTitle": "",
-  "allgemeinmedizin.heroText": "",
-  "allgemeinmedizin.focusTitle": "",
-  "allgemeinmedizin.focus1": "",
-  "allgemeinmedizin.focus2": "",
-  "allgemeinmedizin.focus3": "",
-  "allgemeinmedizin.focus4": "",
-  "allgemeinmedizin.focus5": "",
-  "allgemeinmedizin.focus6": "",
-  "allgemeinmedizin.focus7": "",
-  "allgemeinmedizin.focus8": "",
-  "allgemeinmedizin.preventionTitle": "",
-  "allgemeinmedizin.preventionText": "",
-  "allgemeinmedizin.chronicTitle": "",
-  "allgemeinmedizin.chronicText1": "",
-  "allgemeinmedizin.chronicText2": "",
+  "allgemeinmedizin.heroTitle": "Medycyna ogólna",
+  "allgemeinmedizin.heroText": "Medycyna ogólna to serce naszej praktyki. Jesteśmy Twoim pierwszym punktem kontaktu w sprawach zdrowotnych – zarówno w przypadku ostrych dolegliwości, chorób przewlekłych, jak i profilaktyki. Dzięki nowoczesnej diagnostyce, osobistemu podejściu i wieloletniemu doświadczeniu wspieramy Ciebie i Twoją rodzinę w każdej sytuacji.",
+  "allgemeinmedizin.focusTitle": "Nasze obszary specjalizacji",
+  "allgemeinmedizin.focus1": "Opieka doraźna przy infekcjach, urazach i bólu",
+  "allgemeinmedizin.focus2": "Leczenie nadciśnienia, cukrzycy i chorób sercowo-naczyniowych",
+  "allgemeinmedizin.focus3": "Opieka nad dziećmi, dorosłymi i seniorami",
+  "allgemeinmedizin.focus4": "Szczepienia zgodnie z zaleceniami STIKO",
+  "allgemeinmedizin.focus5": "Badania profilaktyczne i kontrolne",
+  "allgemeinmedizin.focus6": "Porady medycyny podróży i szczepienia",
+  "allgemeinmedizin.focus7": "Drobna opieka nad ranami bezpośrednio w gabinecie",
+  "allgemeinmedizin.focus8": "Wizyty domowe w razie potrzeby i po umówieniu",
+  "allgemeinmedizin.preventionTitle": "Profilaktyka i zapobieganie",
+  "allgemeinmedizin.preventionText": "Profilaktyka jest lepsza niż leczenie. W naszej praktyce oferujemy regularne badania profilaktyczne, programy przesiewowe i kontrole zdrowotne. Celem jest wczesne wykrycie chorób i zapobieganie im poprzez ukierunkowane działania. Obejmuje to m.in. badania przesiewowe w kierunku raka skóry, podstawowe badania kardiologiczne, badania krwi oraz porady dotyczące żywienia, aktywności fizycznej i stylu życia.",
+  "allgemeinmedizin.chronicTitle": "Choroby przewlekłe i opieka długoterminowa",
+  "allgemeinmedizin.chronicText1": "Wiele osób żyje z chorobami przewlekłymi, takimi jak cukrzyca, astma czy choroby sercowo-naczyniowe. Ciągła, niezawodna opieka jest kluczowa dla jakości życia.",
+  "allgemeinmedizin.chronicText2": "Wspieramy naszych pacjentów długoterminowo, indywidualnie dostosowujemy plany leczenia i ściśle współpracujemy ze specjalistami. Dzięki temu masz pewność, że nawet w złożonych przypadkach chorobowych otrzymasz optymalną opiekę.",
   "innereMedizin.heroTitle": "",
   "innereMedizin.heroText": "",
   "innereMedizin.diagnosticsTitle": "",
