--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -1,20 +1,20 @@
 {
-  "allgemeinmedizin.heroTitle": "",
-  "allgemeinmedizin.heroText": "",
-  "allgemeinmedizin.focusTitle": "",
-  "allgemeinmedizin.focus1": "",
-  "allgemeinmedizin.focus2": "",
-  "allgemeinmedizin.focus3": "",
-  "allgemeinmedizin.focus4": "",
-  "allgemeinmedizin.focus5": "",
-  "allgemeinmedizin.focus6": "",
-  "allgemeinmedizin.focus7": "",
-  "allgemeinmedizin.focus8": "",
-  "allgemeinmedizin.preventionTitle": "",
-  "allgemeinmedizin.preventionText": "",
-  "allgemeinmedizin.chronicTitle": "",
-  "allgemeinmedizin.chronicText1": "",
-  "allgemeinmedizin.chronicText2": "",
+  "allgemeinmedizin.heroTitle": "Aile Hekimliği",
+  "allgemeinmedizin.heroText": "Aile hekimliği, kliniğimizin kalbidir. Akut şikayetler, kronik hastalıklar veya koruyucu sağlık hizmetleri olsun, tüm sağlık sorularınızda ilk başvuru noktanız biziz. Modern tanı yöntemleri, kişisel ilgi ve yılların deneyimiyle sizi ve ailenizi her durumda destekliyoruz.",
+  "allgemeinmedizin.focusTitle": "Odak Alanlarımız",
+  "allgemeinmedizin.focus1": "Enfeksiyonlar, yaralanmalar ve ağrılar için akut bakım",
+  "allgemeinmedizin.focus2": "Yüksek tansiyon, diyabet ve kalp-damar hastalıklarının tedavisi",
+  "allgemeinmedizin.focus3": "Çocuklar, yetişkinler ve yaşlılar için bakım",
+  "allgemeinmedizin.focus4": "STIKO önerilerine göre aşılar",
+  "allgemeinmedizin.focus5": "Sağlık kontrolleri ve koruyucu muayeneler",
+  "allgemeinmedizin.focus6": "Seyahat tıbbı danışmanlığı ve aşılar",
+  "allgemeinmedizin.focus7": "Klinikte doğrudan küçük yara bakımı",
+  "allgemeinmedizin.focus8": "Gerektiğinde ve randevu ile ev ziyaretleri",
+  "allgemeinmedizin.preventionTitle": "Koruyucu Sağlık & Önlem",
+  "allgemeinmedizin.preventionText": "Önlem, tedaviden iyidir. Kliniğimizde düzenli koruyucu muayeneler, tarama programları ve sağlık kontrolleri sunuyoruz. Amaç, hastalıkları erken tespit etmek ve hedefe yönelik önlemlerle önlemektir. Buna cilt kanseri taramaları, temel kardiyolojik muayeneler, kan testleri ve beslenme, egzersiz ve yaşam tarzı danışmanlığı dahildir.",
+  "allgemeinmedizin.chronicTitle": "Kronik Hastalıklar & Uzun Süreli Bakım",
+  "allgemeinmedizin.chronicText1": "Birçok insan diyabet, astım veya kalp-damar hastalıkları gibi kronik hastalıklarla yaşamaktadır. Sürekli ve güvenilir bakım, yaşam kalitesi için çok önemlidir.",
+  "allgemeinmedizin.chronicText2": "Hastalarımıza uzun vadede destek oluyor, tedavi planlarını bireysel olarak uyarlıyor ve uzmanlarla yakın işbirliği içinde çalışıyoruz. Böylece karmaşık hastalık süreçlerinde bile en iyi şekilde bakıldığınızdan emin oluyoruz.",
   "innereMedizin.heroTitle": "",
   "innereMedizin.heroText": "",
   "innereMedizin.diagnosticsTitle": "",
